// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-collapse should render in expanded state 1`] = `
<modus-wc-collapse collapse-title="Expanded" expanded="true">
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open">
    <input aria-controls="expanded-content" aria-expanded="" aria-labelledby="expanded-title" id="expanded-checkbox" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="expanded-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        Expanded
      </div>
    </div>
    <div aria-labelledby="expanded-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="expanded-content">
      <div>
        Expanded Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with content 1`] = `
<modus-wc-collapse collapse-title="With Content">
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
    <input aria-controls="with-content-content" aria-labelledby="with-content-title" id="with-content-checkbox" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="with-content-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        With Content
      </div>
    </div>
    <div aria-labelledby="with-content-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="with-content-content">
      <div>
        Test Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with custom props 1`] = `
<modus-wc-collapse bordered="false" collapse-description="Test description" collapse-title="Test title" custom-class="test-class" expanded="true" icon="alert" icon-aria-label="Alert icon">
  <!---->
  <div class="modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open test-class">
    <input aria-controls="test-title-content" aria-expanded="" aria-labelledby="test-title-title" id="test-title-checkbox" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="test-title-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        <modus-wc-icon aria-label="Alert icon">
          <i aria-hidden="true" class="modus-icons modus-wc-icon--md" tabindex="-1">
            alert
          </i>
        </modus-wc-icon>
        Test title
      </div>
      <div class="modus-wc-font-light">
        Test description
      </div>
    </div>
    <div aria-labelledby="test-title-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="test-title-content"></div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse should render with default props 1`] = `
<modus-wc-collapse>
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
    <input aria-controls="collapse-content" aria-labelledby="collapse-title" id="collapse-checkbox" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="collapse-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl"></div>
    </div>
    <div aria-labelledby="collapse-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="collapse-content"></div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render in expanded state 1`] = `
<modus-wc-collapse collapse-title="Expanded" expanded="true">
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open">
    <input aria-controls="expanded-content" aria-expanded="" aria-labelledby="expanded-title" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="expanded-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        Expanded
      </div>
    </div>
    <div aria-labelledby="expanded-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="expanded-content">
      <div>
        Expanded Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with content 1`] = `
<modus-wc-collapse collapse-title="With Content">
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
    <input aria-controls="with-content-content" aria-labelledby="with-content-title" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="with-content-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        With Content
      </div>
    </div>
    <div aria-labelledby="with-content-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="with-content-content">
      <div>
        Test Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with custom props 1`] = `
<modus-wc-collapse bordered="false" collapse-description="Test description" collapse-title="Test title" custom-class="test-class" expanded="true" icon="alert" icon-aria-label="Alert icon">
  <!---->
  <div class="modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open test-class">
    <input aria-controls="test-title-content" aria-expanded="" aria-labelledby="test-title-title" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="test-title-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        <modus-wc-icon aria-label="Alert icon">
          <i aria-hidden="true" class="modus-icons modus-wc-icon--md" tabindex="-1">
            alert
          </i>
        </modus-wc-icon>
        Test title
      </div>
      <div class="modus-wc-font-light">
        Test description
      </div>
    </div>
    <div aria-labelledby="test-title-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="test-title-content"></div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with default props 1`] = `
<modus-wc-collapse>
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
    <input aria-controls="collapse-content" aria-labelledby="collapse-title" role="button" type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between" id="collapse-title">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl"></div>
    </div>
    <div aria-labelledby="collapse-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="collapse-content"></div>
  </div>
</modus-wc-collapse>
`;
